# cpluspluslearning

./: .gitignore  1.2__2d_arrays  1.2arrays_2d  2.5Strings  CMakeLists.txt  README.md  topicsandquestions.txt
Assembly/: test.asm
archive/: topicsandquestions.txt
archive/Assembly/: about.md  base.asm  hello.asm  math.asm
archive/class exercises/: ifelse2.cpp
archive/class exercises/challenges/: challenge3_strings.cpp
archive/class exercises/challenges/oop/: a.out
archive/class exercises/exams/: exam1.cpp
archive/class exercises/exams/final/: a.out  q1_main.cpp
archive/class exercises/vectors/: vectors4.cpp  vectors6.cpp  vectors9.cpp
archive/class exercises/workingwithfiles/: intro.cpp
archive/codefromvideos/aug30sept1/: loops_main.cpp  loops_multiply_main.cpp  mine_loop_with_function.cpp
archive/codefromvideos/oct11/: arrays.cpp  arrays.h  arrays_id.cpp  arrays_id.h  arrays_main.cpp
archive/codefromvideos/oct4/: in1.txt  in2.txt  loops2_main.cpp  vectors_main.cpp
archive/codefromvideos/sept13/: a.out  cf3_main.cpp
archive/codefromvideos/sept20/: cf4.h  loops_multiply_main.cpp  primes_main.cpp
archive/codefromvideos/sept27/: in1a.txt  myswap.h  myswapt_main.cpp
c++ general/: AboutStrings.cpp  errors.cpp  findRepeatedWord.cpp  objectLifeCycle.cpp  operationsOnStrings.cpp  parameterspassingmechs.cpp  processingStrings.cpp  runtimeerrors.cpp  strings.cpp
c++ general/errors/: 0.5_errors.cpp  1_compiletimeerrors.cpp  2_linktimeerrors.cpp  fourth_logicerrors.cpp  func2.cpp
c++ general/objectLifeCycle/: Description.md  objectLifeCycle.cpp
c++ general/strings/: operationsOnStrings.cpp
c++ general/thebookstore/: main.cpp
class exercises/: a.out  strings.cpp  switch1.cpp  switch2rockpaperscissors.cpp
class exercises/challenges/: challenge.cpp  challenge6_vectors.cpp  challenge6_vectorsp2.cpp  challenge7.cpp
class exercises/challenges/oop/: challenge1.cpp
class exercises/exams/: a.out  exam2.cpp  exam2.h
class exercises/exams/final/: car.cpp  car.h
class exercises/oop/: main.cpp  objects1.cpp
class exercises/oop/destructors/: main.cpp
class exercises/pointers/: main.cpp
class exercises/vectors/: vectors10.cpp  vectors2.cpp  vectors3.cpp  vectors8.cpp
class exercises/workingwithfiles/: readfromfile.cpp  text.txt
codefromvideos/aug30sept1/: a.out  main_hello.cpp  mine_loop.cpp  mine_loop_with_vector.cpp
codefromvideos/oct11/: arrays_id_main.cpp  tarrays.h  tarrays_main.cpp
codefromvideos/oct4/: filestats_main.cpp  in3.txt
codefromvideos/sept13/: cf1_main.cpp  cf2_main.cpp  cf3.cpp  factorial_main.cpp  factoriald_main.cpp  looops_ascii_main.cpp  testCustomHeader.cpp
codefromvideos/sept20/: cf4_main.cpp  prime_main.cpp  primes_vector_main.cpp
codefromvideos/sept27/: copy2files_main.cpp  filecopy_main.cpp  in2a.txt  myswap.cpp  myswap_main.cpp  myswapt.h  out.txt
dsa/: Description.md  Node.cpp  Node.h  STLBasics.md  abstractADT.cpp  array.cpp  basicOOPwithStructAndEnum.cpp  basicoperations.cpp  cardgame.cpp  simple.cpp
dsa/1basics/: 1basicds.cpp
dsa/1basics/2strings/: processingStrings.cpp
dsa/3List/: LinkedList.h  LinkedListNode.h  Node.h  SinglyLinkedListNodeBased.cpp  SinglyLinkedListNodeBased.h  main.cpp
dsa/4List/: NodeForList.cpp  NodeForList.h  SinglyLinkedListNodeBased.h
dsa/Containers/: 1_2__2d_arrays.cpp  1arrays.cpp  2vectors.cpp  4maps.cpp  5graphs.cpp
dsa/List/: ArrayBasedList.cpp  ArrayBasedList.h  ListCustomADT.cpp  ListCustomADT.h  NodeForList.cpp  NodeForList.h  SinglyLinkedListNodeBased.cpp  SinglyLinkedListNodeBased.h
dsa/Node/: Node.cpp  Node.h
dsa/basics/: basicds.cpp
dsa/dsaProjects/DMVWaitingListManager--LinkedList/: DMVLinkedList.cpp  DMVLinkedList.h  Person.h  README.md
dsa/practice/: easyCenturyFromYear.cpp
dsa/problems/: easyPrintoutItemsInList.cpp  shortestword.cpp  tokenizeString.cpp
dsa/problems/easy/: LengthOfEachWord.cpp  TODOaddUpToZero.cpp  TODOmapForWordsAndNums.cpp  addUpToZero.cpp  combinations.cpp  largestNumber.cpp  listOf2Items.cpp  mapOfNums.cpp  printEveryOtherItem.cpp  shortestword.cpp  tokenizeString.cpp
dsa/problems/hr/: fizzbuzz.cpp  flippingMatrix.cpp
dsa/problems/hr_3monthsprep/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  flippingMatrix_TODO.cpp
dsa/problems/hr_3monthsprep/w1/: 3.cpp  5.cpp
dsa/problems/hr_3monthsprep/w2/: CounterSort.cpp  GradeStudents.cpp  MarsExploration.cpp
exercises/: a.out  ifelse1.cpp  stringcomparison.cpp  strings2.cpp  switch3greekletter.cpp
exercises/challenges/: a.out  challenge1.cpp  challenge2.cpp  challenge4_vectors.cpp  challenge4_vectors2.cpp  challenge5_vectors.cpp  challenge6_vectorsp3.cpp  challenge6_vectorsp4.cpp
exercises/challenges/oop/: challenge2.cpp  challenge3.cpp
exercises/dsa/: TODOarray.cpp  a.out  array.cpp  linkedlist.cpp
exercises/dsa/exercises/: TODOstringToMapProblem.cpp  a.out
exercises/exams/: exam1_p2.cpp  exam2_main.cpp  exam2instructions.txt
exercises/exams/final/: truck.cpp  truck.h  truck_main.cpp
exercises/oop/: objects1.cpp
exercises/oop/constructorOverloading/: main.cpp
exercises/oop/destructors/: main.cpp
exercises/oop/separateFilesForClasses/: Item.cpp  Item.h  main.cpp
exercises/vectors/: a.out  vectors.cpp  vectors5.cpp  vectors7.cpp
exercises/workingwithfiles/: a.out  readingpdf.cpp
general/: GeneralInfoOnComputerMemory.md  bitwiseOperations.cpp
general/errors/: func2.h
general/functions/: functionsPlayground.cpp
oop/: Description.md
project1-workingwithfiles/: Description.md  README.md  data.txt  exercise1.cpp  main.cpp
project1-workingwithfiles/modify_data/: multiply_by_two.cpp
project1/modify_data/: a.out  multiply_by_two.cpp
project2/: README.md  a.out  temperatureConverter.cpp
project2-bookreaderqt/: Notes.md  README.md
project3-securenotes/: README.md  main.cpp  snotes.cpp  snoteswithopenssl.cpp  tasks.json
project4-basiccompiler/: Decription.md  README.md
project5-SFML/: CMakeLists.txt  main.cpp
project5-SFMLgame/: main.cpp
